--- a/panel.html
+++ b/panel.html
@@ -18,8 +18,11 @@
             <img id="baner" src="Pictures/Casino_baner_9.jpg">
         </header>
         <main>
-            <div id="LeftContainer">
-                <img src="Pictures/Tokens.jpg">
+            <div id="LeftContainer" style="text-align: center;">
+                <p id="a">A: X</p>
+                <p id="b">B: X</p>
+                <p id="c">C: X</p>
+                <p id="d">D: X</p>
             </div>
             <div id="CenterContainer">
                 <div class="RandomPicture"><img src="Pictures_To_Draw/Pytajnik.jpg"></div>
@@ -29,18 +32,13 @@
                 <button id="SpinButton" type="button" onclick="spin();">SPIN (-20)</button>
             </div>
             <div id="RightContainer">
-                <img src="Pictures/Tokens.jpg">
+                <p id="points">All points: 200</p>
+                <p id="sum">Sum: 0</p>
+                <p id="newPoints">New points: 0</p>
             </div>
         </main>
         <div id="pointsTable">
-            <p id="points">All points: 200</p>
-            <p id="newPoints">New points: 0</p>
+
         </div>
-        <footer>
-            <div class="author">
-                FlashLAB Studio &copy;<br>
-                Piotr Morawiec
-            </div>
-        </footer>
     </body>
 </HTML>
