--- a/index.html
+++ b/index.html
@@ -1,3 +1,28 @@
+<!-- 
+░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
+░░░░░░░░░░░░░░░░░░░░████░░██░░░█░████░░░░░░░░░░░░░░░░░░░░░░
+░░░░░░░░░░░░░░░░░░░██░░██░█░█░░█░█░░░░░░░░░░░░░░░░░░░░░░░░░
+░░░░░░░░░░░░░░░░░░░█░░░░█░█░██░█░████░░░░░░░░░░░░░░░░░░░░░░
+░░░░░░░░░░░░░░░░░░░██░░██░█░░█░█░█░░░░░░░░░░░░░░░░░░░░░░░░░
+░░░░░░░░░░░░░░░░░░░░████░░█░░░██░████░░░░░░░░░░░░░░░░░░░░░░
+░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
+░░░░░░░░░░░░░░█░░░░█░░██████░░██░░░█░░███░░░░░░░░░░░░░░░░░░
+░░░░░░░░░░░░░░█░░░░█░░█░░░░█░░█░█░░█░░█░░█░░░░░░░░░░░░░░░░░
+░░░░░░░░░░░░░░██████░░██████░░█░██░█░░█░░█░░░░░░░░░░░░░░░░░
+░░░░░░░░░░░░░░█░░░░█░░█░░░░█░░█░░█░█░░█░░█░░░░░░░░░░░░░░░░░
+░░░░░░░░░░░░░░█░░░░█░░█░░░░█░░█░░░██░░███░░░░░░░░░░░░░░░░░░
+░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
+░░██████░░░░░████████░░████░░░██░░█████░░░░░██░░██████████░
+░░██░░░██░░░░██░░░░██░░██░██░░██░░██░░██░░░░░░░░░░░░██░░░░░
+░░██░░░██░░░░██░░░░██░░██░░█░░██░░██░░░░██░░██░░░░░░██░░░░░
+░░██░░░██░░░░██░░░░██░░██░░█░░██░░██░░░░██░░██░░░░░░██░░░░░
+░░██████░░░░░████████░░██░░██░██░░██░░░░██░░██░░░░░░██░░░░░
+░░████████░░░██░░░░██░░██░░░█░██░░██░░░░██░░██░░░░░░██░░░░░
+░░██░░░░░██░░██░░░░██░░██░░░█░██░░██░░░░██░░██░░░░░░██░░░░░
+░░██░░░░░██░░██░░░░██░░██░░░████░░██░░██░░░░██░░░░░░██░░░░░
+░░████████░░░██░░░░██░░██░░░░███░░█████░░░░░██░░░░░░██░░░░░
+░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░ 
+-->
 <!Doctype HTML>
 <HTML>
     <Head>
@@ -10,7 +35,7 @@
         
         <link rel="icon" href="Pictures/icon.png">
         <link rel="stylesheet" type="text/css" href="style.css"/>
-        <script type="text/javascript" src="saveJS.js"></script>
+        <script type="text/javascript" src="main1.js" defer></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     </Head>
     <body>
@@ -33,12 +58,12 @@
             </div>
         </main>
         <div id="pointsTable">
-            <p id="points">All points: 200</p>
-            <p id="newPoints">New points: 0</p>
+            <p id="points">All points: <span class="red">200</span></p>
+            <p id="newPoints">New points: <span class="red">0</span></p>
         </div>
         <footer>
             <div class="author">
-                FlashLAB Studio &copy;<br>
+                <a href="https://github.com/Lichwiarz">FlashLAB Studio &copy;</a><br>
                 Piotr Morawiec
             </div>
         </footer>
