--- a/panel.html
+++ b/panel.html
@@ -1,3 +1,5 @@
+<!-- Panel is page for administrator witch more function and information displayed-->
+
 <!Doctype HTML>
 <HTML>
     <Head>
@@ -10,7 +12,7 @@
         
         <link rel="icon" href="Pictures/icon.png">
         <link rel="stylesheet" type="text/css" href="style.css"/>
-        <script type="text/javascript" src="saveJS.js"></script>
+        <script type="text/javascript" src="JSpanel.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     </Head>
     <body>
